Added minimax with alpha beta pruning